2008-04-25  Noel O'Boyle <baoilleach@gmail.com>

	* data/mr.txt: Based on a comparison with RDKit's Crippen parameter
	text file, identified a single error in the MR value for Me1 (see
	JCICS, 1999, 39, 868) 

2008-04-21 Chris Morley

	* src/descriptors/groupcontrib.cpp(Predict): Make a copy of
	the molecule and add hydrogens before calculating property.
	As recommended by Noel in his blog.

2008-04-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/xml/cmlformat.cpp: change line 1810 from 
	s = pUnitCell.GetSpaceGroupName();    to
	s = pUnitCell->GetSpaceGroupName(); 

2008-04-22  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cmlformat.cpp: import/export crystal symmetry.
	* src/math/spacegroup.cpp: fixes a bug related to transform creation.

2008-04-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: Documentation update.
	
	* src/forcefield.cpp: Fixed (X, Y, Z, XYZ) atoms are now checked in
	SteepestDescent and ConjugateGradients and works.
	Enable constraints again. Distance and angles work, torsion still
	needs some attention.

2008-04-21  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/obconversion.h: Moved the Formatpos typedef
	outside of the class in order to preserve old API call.

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Reinstate a version of OBConversion::GetNextFormat() to prevent
	breaking xchemdraw. Formatpos is defined differently but would
	not be accessed in an application program.

	NEWS, windows-vc2005/OBPythonOBF/Readme.txt:
	Minor documentation changes

2008-04-19  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Added
	SetupPointer. Added Framework for specifying groups using OBBitVec for
	now until we have OBGroup/OBFragment. Documentation example using
	groups. 
	The *RotorSearch functions should call SetupPointers when they change